force-app/main/default/objects/Development_Strategy__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <label>Challenges</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>