force-app/main/default/objects/Development_Strategy__c/fields/Development_Strategy_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Strategy_Status__c</fullName>
    <label>Development Strategy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Speculative</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>