force-app/main/default/objects/Development_Strategy__c/fields/Overall_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Overall_Strategy__c</fullName>
    <label>Overall Strategy</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>