force-app/main/default/objects/Development_Strategy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Workplan__c</columns>
    <columns>Overall_Strategy__c</columns>
    <columns>Short_Term_Objectives__c</columns>
    <columns>Challenges__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>