force-app/main/default/objects/Development_Strategy__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <columns>Account_Workplan__c</columns>
    <columns>Overall_Strategy__c</columns>
    <columns>Short_Term_Objectives__c</columns>
    <columns>Challenges__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Workplan__c</field>
        <operation>equals</operation>
    </filters>
    <label>Test</label>
</ListView>